--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@
         
     <footer class="text-center text-white text-s py-3 space-y-2">
         <p>🔵🍃🔺🌀</p>
-        <p>made with ❤️ by <a href="https://x.com/harrytotter7" target="_blank" rel="nofollow noreferrer" class="underline">@harrytotter7</a></p>
-        <p> ☕ dev wallet <a href="https://basescan.com" target="_blank" rel="nofollow noreferrer" class="underline">harrytotter.base.eth</a></p>
-        <p>✅ open source code on <a href="https://github.com" target="_blank" rel="nofollow noreferrer" class="underline">github</a></p>
-        <p>🛡️ browse this website on <a href="https://xxxx.com" target="_blank" rel="nofollow noreferrer" class="underline">IPFS</a></p>
+        <p>made with ❤️ by <a href="https://x.com/toadgang7" target="_blank" rel="nofollow noreferrer" class="underline">@toadgang7</a></p>
+        <p> ☕ dev wallet harrytotter.base.eth</p>
+        <p>✅ open source code on <a href="https://github.com/toadgang/" target="_blank" rel="nofollow noreferrer" class="underline">github</a></p>
+        <p>🛡️ browse this website on IPFS (<a href="https://toadgang-portal.vercel.app/" target="_blank" rel="nofollow noreferrer" class="underline">1</a>, <a href="https://bafybeicwtij3qvovb4whscxamqyj73rts3ixz2m474cjeaq2s6zdlzgeve.ipfs.dweb.link/" target="_blank" rel="nofollow noreferrer" class="underline">2</a>)</p>
     </footer>
 </div>
 
@@ -871,3 +871,4 @@
 
 </body>
 </html>
+
