--- a/taboshi.html
+++ b/taboshi.html
@@ -219,10 +219,10 @@
  
     <footer class="text-center text-white text-s py-3 space-y-2">
         <p>🔵🍃🔺🌀</p>
-        <p>made with ❤️ by <a href="https://x.com/harrytotter7" target="_blank" rel="nofollow noreferrer" class="underline">@harrytotter7</a></p>
-        <p> ☕ dev wallet <a href="https://basescan.com" target="_blank" rel="nofollow noreferrer" class="underline">harrytotter7.base.eth</a></p>
-        <p>✅ open source code on <a href="https://github.com" target="_blank" rel="nofollow noreferrer" class="underline">github</a></p>
-        <p>🛡️ browse this website on <a href="https://xxxx.com" target="_blank" rel="nofollow noreferrer" class="underline">IPFS</a></p>
+        <p>made with ❤️ by <a href="https://x.com/toadgang7" target="_blank" rel="nofollow noreferrer" class="underline">@toadgang7</a></p>
+        <p> ☕ dev wallet harrytotter.base.eth</p>
+        <p>✅ open source code on <a href="https://github.com/toadgang/" target="_blank" rel="nofollow noreferrer" class="underline">github</a></p>
+        <p>🛡️ browse this website on IPFS (<a href="https://toadgang-portal.vercel.app/" target="_blank" rel="nofollow noreferrer" class="underline">1</a>, <a href="https://bafybeiazjo6zorwcplsrnhwkadqllbzvl5xbplnf4b7i6tqqt33hwliova.ipfs.dweb.link/" target="_blank" rel="nofollow noreferrer" class="underline">2</a>)</p>
     </footer>
 </div>
 
@@ -507,4 +507,5 @@
 </script>
 </body>
 </html>
+
 
